--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # venv
 .venv/
+.conda/
 .venv_tst/
 # Logfiles
 logs/
@@ -13,3 +14,5 @@ __pycache__/
 .ipynb_checkpoints/
 alttpr*.py
 tracker_box_and_points.txt
+.env
+requirements_versionfree*.txt
